[package]
name = "pdb"
version = "0.1.0"
authors = ["bakape <bakape@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3.0"
serde = { version = "1.0.104", features = ["derive"] }
bincode = "1.2.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = "0.8.1"
